# MCM_mini

./: README.md  makeunx  miner.c  mini_mcm.c  rand.c
MiniMCM/: CMakeLists.txt
dependencies/DKatNetGetWork/: DKatNetGetWork.h
trigg/: cuda_trigg.cu
